# tidal-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  tidal_cli.py
skills/tidal-auth/: SKILL.md
skills/tidal-library/: SKILL.md
skills/tidal-playlist/: SKILL.md
skills/tidal-search/: SKILL.md
specs/001-tidal-cli-wrapper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tidal-cli-wrapper/checklists/: requirements.md
specs/001-tidal-cli-wrapper/contracts/: cli-commands.md
specs/002-cli-skills/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cli-skills/checklists/: requirements.md
specs/002-cli-skills/contracts/: skill-format.md
